--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -369,8 +369,6 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 <div class="col-md-2 stories" style="height:250px;"><h2>Plastic Upcycling</h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
      
-<div class="col-md-2 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://allnations.cafe">All Nations Cafe</a>'s model for informal education and mentoring process and peacemaking model</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-
 </div>
 <div class="row" style="margin:25px;">
 
@@ -380,9 +378,22 @@ networkSeries.nodes.template.events.on("out", function(event) {
  
 <div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280><BR>Machakos Kenya community group focused on local job creation, <a href="https://mamawatoto.link">Mamawatoto Eco School</a>. Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
-<div class="col-md-3 col-sm-3 stories"><h2>Biogas projects</h2><p>Small to mid-sized biogas projects designed to satisfy local sanitation and energy requirements.  Hub and spoke model allows for processing  locations for biosolids, commposting on-site is another option. Biodigester membrane shipped via alibaba $75, or made from truck tubes repurposed into long flexible methane producing membrane biodigesters. </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-   
 </div>
+<div class="row" style="margin:25px;">
+
+<div class="col-md-3 col-sm-3 stories"><h2>Garbage Map</h2><p> To better understand the extent of the solid waste management problem in East Africa, SCD Hub works directly with Reuben Kipchirchir to map open burn areas in and around Machakos County, to create entry points to circular economies via composting, plastic diversion, youth trainings, and upcycled product creation. </p><p><a class="btn btn-raised" href="https://garbagemap.org" role="button">View details »</a></p></div>
+   
+<div class="col-md-3 col-sm-3 stories"><h2>MMWTT Upcycling Center</h2><p> Development of a carbon trading support model for composting, plastic burn abatement, tree planting, cover cropping, support for young eco-pioneers, planning for mechanized support.  ducation abouthCarbon Credit systems </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+
+<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p> Computer systems and printers for immigrant families.  ANC Denver provides a service of configuring a laser printer and modern laptop for delivery through partners ACC, and Lutheran Family Services.  Cost per system is $225</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+</div>
+
+</div>
+<div class="row" style="margin:25px;">
+
+<div class="col-md-3 col-sm-3 stories"><h2>Vihega County Medical Center</h2><p> A new low cost communiy health center has been contructed in Vihiga County, Kenya.  SCD Hub  is helping to plan for an inclusive future proof waste stream management related to the facility's medical waste incineration requirements. </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+
+<div class="col-md-3 col-sm-3 stories"><h2>Khartoum Solid Waste Planning</h2><p> SCD Hub participates in a waste management planning group with EPICS program for Khartoum, Sudan.  Options and examples of how inclusive waste stream management is possible with lessons learned from community work in Kenya and Colorado, USA</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
 <div class="row container" style="position:relative;top:-225px;">
 
@@ -391,31 +402,6 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 
 
-  <div class="card-grid">
-        <div class="card__overlay">
-          <div>
-            <h5 class="card__overlay-heading">
-             <style>
-             #ifrm1 {
-              opacity: 0;
-              transition: opacity 1.5s linear;
-             }
-             #trig1:hover + iframe {
-              opacity: 1;
-              transition: opacity 1.5s linear;
-             }
-             </style>
-
-             <a href='#/' id='trig1'>Share</a>
-             <img src="http://localhost:1313/images/logo.svg"> 
-             <a href='#/' id='trig1'>HOVER</a>
-             <iframe id='ifrm1' name="ifrm1" width="560" height="315" src="https://www.youtube.com/embed/Z4jGxeyu0JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </h5>
-              {{ partial "fontawesome.html" "diamond" }}
-          </div>
-        </div>
-  </div>
-<hr>
 
 
   <div class="card-grid">
@@ -618,4 +604,29 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
 <div class="col-auto"></div>
 </span>
     
+  <div class="card-grid">
+        <div class="card__overlay">
+          <div>
+            <h5 class="card__overlay-heading">
+             <style>
+             #ifrm1 {
+              opacity: 0;
+              transition: opacity 1.5s linear;
+             }
+             #trig1:hover + iframe {
+              opacity: 1;
+              transition: opacity 1.5s linear;
+             }
+             </style>
+
+             <a href='#/' id='trig1'>Share</a>
+             <img src="http://localhost:1313/images/logo.svg"> 
+             <a href='#/' id='trig1'>HOVER</a>
+             <iframe id='ifrm1' name="ifrm1" width="560" height="315" src="https://www.youtube.com/embed/Z4jGxeyu0JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </h5>
+              {{ partial "fontawesome.html" "diamond" }}
+          </div>
+        </div>
+  </div>
+<hr>
     
