--- a/themes/amp/layouts/partials/cat.html
+++ b/themes/amp/layouts/partials/cat.html
@@ -11,7 +11,8 @@
 
 
 {{else}} 
-
+                    
+{{if eq .Cat "carbon-trading" }}{{ partial "subcat/carbon-trading.html"}}{{end}}
 {{if eq .Cat "Shelter" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "Wastewater Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "wastewater collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
