--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -365,16 +365,14 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 <div class="row" style="margin:25px;">
     
-<div class="col-md-2 stories" style="height:350px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://www.ancdenver.com">All Nations Center</a>. A model for informal education and community peacemaking model, <a href="">Mango House Aurora Colorado</a>.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-
 <div class="col-md-2 stories" style="height:250px;"><h2>Plastic Upcycling</h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
      
 </div>
 <div class="row" style="margin:25px;">
 
-<div class="col-md-3 col-sm-3 stories"><h2>PENG Collaboration</h2><p></p><h4>Peace Engineering Student Collaboration</h4><p>SCD Hub maintains a public domain sustainable solutions database which can be downloaded or used as a web api. </p><p><a class="btn btn-raised" href="https://scdhub.org/index.json" role="button">USE THIS LINK</a> to explore the data in json format.  We are happy to have had the help of Drexel, Purdue, and UNM students in the 2020-21 scholastic season, and look forward to a new year of collaboration with Sudan Technical University, UNM, Drexel, Purdue, and maybe you! contact ecocommunity@protonmail.com to discuss.</p></div>
+<div class="col-md-3 col-sm-3 stories"><h4>Engineering Projects in Community Service</h4><p>2020-21 scholastic collaboration with Purdue U has focused on a guide for how community projects can interface with carbon trading. Their advisory document will be published here soon.</p></div>
         
-<div class="col-md-3 col-sm-3 stories"><h2>SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. the url will change to mylunch.link  </p><p>The beta forum and chat can be accessed here.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>New SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. </p><p>The forum can be used for planning, research, user profiles, blogging, and chat.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
  
 <div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280><BR>Machakos Kenya community group focused on local job creation, <a href="https://mamawatoto.link">Mamawatoto Eco School</a>. Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
@@ -383,9 +381,9 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 <div class="col-md-3 col-sm-3 stories"><h2>Garbage Map</h2><p> To better understand the extent of the solid waste management problem in East Africa, SCD Hub works directly with Reuben Kipchirchir to map open burn areas in and around Machakos County, to create entry points to circular economies via composting, plastic diversion, youth trainings, and upcycled product creation. </p><p><a class="btn btn-raised" href="https://garbagemap.org" role="button">View details »</a></p></div>
    
-<div class="col-md-3 col-sm-3 stories"><h2>MMWTT Upcycling Center</h2><p> Development of a carbon trading support model for composting, plastic burn abatement, tree planting, cover cropping, support for young eco-pioneers, planning for mechanized support.  ducation abouthCarbon Credit systems </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>MMWTT Upcycling Center</h2><p> Development of a carbon trading support model for composting, plastic burn abatement, tree planting, cover cropping, support for young eco-pioneers, planning for mechanized support.  ducation abouthCarbon Credit systems </p> </div>
 
-<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p> Computer systems and printers for immigrant families.  ANC Denver provides a service of configuring a laser printer and modern laptop for delivery through partners ACC, and Lutheran Family Services.  Cost per system is $225</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p> Computer systems and printers for immigrant families.  ANC Denver provides a service of configuring a laser printer and modern laptop for delivery through partners ACC, and Lutheran Family Services.  Cost per system is $225</p> </div>
 </div>
 
 </div>
