--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -365,33 +365,43 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 <div class="row" style="margin:25px;">
     
-<div class="col-md-2 stories" style="height:250px;"><h2>Plastic Upcycling</h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-     
+<div class="col-md-2 stories" style="height:450px;"><h2><a href="https://mamawatoto.link">Mamawatoto Eco School</a></h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p> Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280></p></div>
+
+<div class="col-md-3 col-sm-3 stories"><h2>Vihega County Medical Center</h2><p> A new low cost communiy health center has been contructed in Vihiga County, Kenya.  SCD Hub  is helping to plan for an inclusive future proof waste stream management related to the facility's medical waste incineration requirements. </p> </div>
+
+
 </div>
 <div class="row" style="margin:25px;">
 
-<div class="col-md-3 col-sm-3 stories"><h4>Engineering Projects in Community Service</h4><p>2020-21 scholastic collaboration with Purdue U has focused on a guide for how community projects can interface with carbon trading. Their advisory document will be published here soon.</p></div>
+<div class="col-md-3 col-sm-3 stories"><h4><b>Engineering Projects in Community Service</b></h4><p>2020-21 scholastic collaboration with Purdue U has focused on a guide for how community projects can interface with carbon trading. Their advisory document will be published here soon.</p></div>
         
 <div class="col-md-3 col-sm-3 stories"><h2>New SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. </p><p>The forum can be used for planning, research, user profiles, blogging, and chat.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
  
-<div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280><BR>Machakos Kenya community group focused on local job creation, <a href="https://mamawatoto.link">Mamawatoto Eco School</a>. Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><BR>Machakos Kenya community group focused on local job creation,. </p><p> </p></div>
+
+
+
+
 
 </div>
 <div class="row" style="margin:25px;">
 
 <div class="col-md-3 col-sm-3 stories"><h2>Garbage Map</h2><p> To better understand the extent of the solid waste management problem in East Africa, SCD Hub works directly with Reuben Kipchirchir to map open burn areas in and around Machakos County, to create entry points to circular economies via composting, plastic diversion, youth trainings, and upcycled product creation. </p><p><a class="btn btn-raised" href="https://garbagemap.org" role="button">View details »</a></p></div>
    
-<div class="col-md-3 col-sm-3 stories"><h2>MMWTT Upcycling Center</h2><p> Development of a carbon trading support model for composting, plastic burn abatement, tree planting, cover cropping, support for young eco-pioneers, planning for mechanized support.  ducation abouthCarbon Credit systems </p> </div>
+<div class="col-md-3 col-sm-3 stories"><h2>Ecotez project</h2><p> Development of a carbon trading support model for Mamawatoto Eco Schoool to recongnize leadership in composting, plastic burn abatement, tree planting, cover cropping, and support for young eco-pioneers. Collectable, eco friendly NFTs are available to compensate contributors & help the MMWTT project. </p> </div>
 
-<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p> Computer systems and printers for immigrant families.  ANC Denver provides a service of configuring a laser printer and modern laptop for delivery through partners ACC, and Lutheran Family Services.  Cost per system is $225</p> </div>
 </div>
 
 </div>
 <div class="row" style="margin:25px;">
 
-<div class="col-md-3 col-sm-3 stories"><h2>Vihega County Medical Center</h2><p> A new low cost communiy health center has been contructed in Vihiga County, Kenya.  SCD Hub  is helping to plan for an inclusive future proof waste stream management related to the facility's medical waste incineration requirements. </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-
 <div class="col-md-3 col-sm-3 stories"><h2>Khartoum Solid Waste Planning</h2><p> SCD Hub participates in a waste management planning group with EPICS program for Khartoum, Sudan.  Options and examples of how inclusive waste stream management is possible with lessons learned from community work in Kenya and Colorado, USA</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+
+<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p>  ANC Denver assits newly arriving immigrant families by providing a laser printer, modern laptop, software and training support.  Cost per system is $225</p> </div>
+
+</div>
+
+
 
 <div class="row container" style="position:relative;top:-225px;">
 
