--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -376,8 +376,8 @@ networkSeries.nodes.template.events.on("out", function(event) {
 <div class="col-md-3 col-sm-3 stories"><h4><b>Engineering Projects in Community Service</b></h4><p>2020-21 scholastic collaboration with Purdue U has focused on a guide for how community projects can interface with carbon trading. Their advisory document will be published here soon.</p></div>
         
 <div class="col-md-3 col-sm-3 stories"><h2>New SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. </p><p>The forum can be used for planning, research, user profiles, blogging, and chat.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
- 
-<div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><BR>Machakos Kenya community group focused on local job creation,. </p><p> </p></div>
+
+<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p>ANC Denver assits newly arriving immigrant families by providing a laser printer, modern laptop, software and training support.  Cost per system is $225</p> </div>
 
 
 
@@ -388,16 +388,18 @@ networkSeries.nodes.template.events.on("out", function(event) {
 
 <div class="col-md-3 col-sm-3 stories"><h2>Garbage Map</h2><p> To better understand the extent of the solid waste management problem in East Africa, SCD Hub works directly with Reuben Kipchirchir to map open burn areas in and around Machakos County, to create entry points to circular economies via composting, plastic diversion, youth trainings, and upcycled product creation. </p><p><a class="btn btn-raised" href="https://garbagemap.org" role="button">View details »</a></p></div>
    
-<div class="col-md-3 col-sm-3 stories"><h2>Ecotez project</h2><p> Development of a carbon trading support model for Mamawatoto Eco Schoool to recongnize leadership in composting, plastic burn abatement, tree planting, cover cropping, and support for young eco-pioneers. Collectable, eco friendly NFTs are available to compensate contributors & help the MMWTT project. </p> </div>
+<div class="col-md-3 col-sm-3 stories"><h2>Ecotez project</h2><p> Development of a carbon trading support model for Mamawatoto Eco Schoool to recongnize leadership in composting, plastic burn abatement, tree planting, cover cropping, and support for young eco-pioneers. Collectable, eco friendly NFTs are available to compensate contributors & help the MMWTT project. </p><p><a class="btn btn-raised" href="https://ecotez.com" role="button">Ecotez.com beta is live »</a></p> </div>
 
 </div>
 
 </div>
 <div class="row" style="margin:25px;">
 
-<div class="col-md-3 col-sm-3 stories"><h2>Khartoum Solid Waste Planning</h2><p> SCD Hub participates in a waste management planning group with EPICS program for Khartoum, Sudan.  Options and examples of how inclusive waste stream management is possible with lessons learned from community work in Kenya and Colorado, USA</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>Khartoum Solid Waste Planning</h2><p> SCD Hub participates in a waste management planning group with EPICS program for Khartoum, Sudan.  Options and examples of how inclusive waste stream management is possible with lessons learned from community work in Kenya and Colorado, USA</p><p> </p></div>
 
-<div class="col-md-3 col-sm-3 stories"><h2>All Nations Center</h2><p>  ANC Denver assits newly arriving immigrant families by providing a laser printer, modern laptop, software and training support.  Cost per system is $225</p> </div>
+<div class="col-md-3 col-sm-3 stories"><h2>Compostable Waste Planning</h2><p>  Of course, we believe in working on problems of waste management our USA community of Nederland Colorado as well! We are working toward a siting and business mentoring soltion for NedCompost's two Earthtub composters. Diverting organic matter reduces climate effects from methane emissions & makes a healthy sellable soil amendment.</p><p> </p></div>
+
+
 
 </div>
 
