--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -365,6 +365,9 @@ networkSeries.nodes.template.events.on("out", function(event) {
     <div class="container" style="position:relative;top:-195px;" >
 
 <div class="row" style="margin:25px;">
+  
+  
+<div class="col-md-2 stories" style="height:450px;"><h2><a href="https://ecocommunity-dao.github.io">Biocomposites Breakdown</a></h2><p><a href="https://ecocommunity-dao.github.io">Ecocommunity DAO </a></p></div>
     
 <div class="col-md-2 stories" style="height:450px;"><h2><a href="https://mamawatoto.link">Mamawatoto Eco School</a></h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p> Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280></p></div>
 
