--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -186,10 +186,28 @@
 {{ end }}
             </aside>
 
-   
+
         
-{{if eq .Title "Water Treatment"}}{{ partial "subcat/water-treatment.html"}}<p>
         
+ {{if eq .Title "Water Treatment"}}{{ 
+
+        <amp-accordion id="my-accordion" disable-session-states>
+  <section>
+    <h2>Section 1</h2>
+    <p>Content in section 1.</p>
+  </section>
+  <section>
+    <h2>Section 2</h2>
+    <div>Content in section 2.</div>
+  </section>
+  <section expanded>
+    <h2>Section 3</h2>
+    <amp-img src="/static/inline-examples/images/squirrel.jpg"
+      width="320"
+      height="256"></amp-img>
+        
+        
+        <p>
        Q; please describe the risks associated with the different water filter designs currently being produced locally in low income areas.
         </p><p>
 A: The risks associated with locally made water filters in low-income areas can vary depending on the design of the filter. Here are some common risks associated with different water filter designs:
@@ -208,7 +226,13 @@ A: The risks associated with locally made water filters in low-income areas can 
         </p><p>
 Overall, it's important to ensure that locally made water filters are designed, manufactured, and maintained to meet the appropriate quality standards to ensure they provide safe drinking water.
       
-        </p>{{end}}
+        </p>
+          
+            </section>
+</amp-accordion>
+
+          
+          {{end}}
 
         
         
