--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -190,27 +190,13 @@
         
         
  {{if eq .Title "Water Treatment"}}{{ 
+    <section>
+    <h2>via Chat GPT</h2>
+    <p>Please describe the risks associated with the different water filter designs currently being produced locally in low income areas.</p>
 
-        <amp-accordion id="my-accordion" disable-session-states>
-  <section>
-    <h2>Section 1</h2>
-    <p>Content in section 1.</p>
-  </section>
-  <section>
-    <h2>Section 2</h2>
-    <div>Content in section 2.</div>
-  </section>
-  <section expanded>
-    <h2>Section 3</h2>
-    <amp-img src="/static/inline-examples/images/squirrel.jpg"
-      width="320"
-      height="256"></amp-img>
-        
         
         <p>
-       Q; please describe the risks associated with the different water filter designs currently being produced locally in low income areas.
-        </p><p>
-A: The risks associated with locally made water filters in low-income areas can vary depending on the design of the filter. Here are some common risks associated with different water filter designs:
+    A: The risks associated with locally made water filters in low-income areas can vary depending on the design of the filter. Here are some common risks associated with different water filter designs:
         </p><p>
     Gravity-fed ceramic filters: These filters can crack or break, allowing contaminants to pass through. Additionally, the ceramic element can become contaminated with bacteria if not cleaned properly.
         </p><p>
