--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -189,7 +189,7 @@
 
         
         
- {{if eq .Title "Water Treatment"}}{{ 
+ {{if eq .Title "Water Treatment"}}
     <section>
     <h2>via Chat GPT</h2>
     <p>Please describe the risks associated with the different water filter designs currently being produced locally in low income areas.</p>
@@ -211,14 +211,9 @@
     Chlorine treatment: Chlorine treatment requires consistent access to chlorine and can lead to the formation of harmful by-products if not properly dosed.
         </p><p>
 Overall, it's important to ensure that locally made water filters are designed, manufactured, and maintained to meet the appropriate quality standards to ensure they provide safe drinking water.
-      
         </p>
-          
-            </section>
-</amp-accordion>
-
-          
-          {{end}}
+        </section>          
+   {{end}}
 
         
         
