--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -191,9 +191,9 @@
         
  {{if eq .Title "Water Treatment"}}
     <section>
-
+            <h2>Producing water filters</h2>
         <p>
-    The risks associated with locally made water filters in low-income areas can vary depending on the design of the filter. Here are some common risks associated with different water filter designs:
+       Here are some common risks associated with different water filter designs ( via chatGPT):
         </p><p>
             <b>Gravity-fed ceramic filters</b>: These filters can crack or break, allowing contaminants to pass through. Additionally, the ceramic element can become contaminated with bacteria if not cleaned properly.
         </p><p>
