--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -145,6 +145,7 @@
  {{if eq .Title "Non-compactor Trucks"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
  {{if eq .Title "Compactor Trucks"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
 
+ {{if eq .Title "municipal-solid-waste-disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "No Disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "msw disposal no disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "Waste Discarded at Source"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
@@ -191,10 +192,10 @@
         
  {{if eq .Title "Water Treatment"}}
     <section>
-            <h2>Producing water filters</h2>
-        <p>
-       Here are some common risks associated with different water filter designs ( via chatGPT):
-        </p><p>
+            <h2>Accessible water filters</h2>
+            
+            <img src="https://scdhub.org/images/water_filters.png">
+         <p>
             <b>Gravity-fed ceramic filters</b>: These filters can crack or break, allowing contaminants to pass through. Additionally, the ceramic element can become contaminated with bacteria if not cleaned properly.
         </p><p>
             <b>Bio-sand filters</b>: Bio-sand filters can become clogged with debris, reducing the effectiveness of the filter. In addition, if not properly maintained, the filter can become a breeding ground for bacteria.
