--- a/themes/amp/layouts/partials/cat.html
+++ b/themes/amp/layouts/partials/cat.html
@@ -13,7 +13,7 @@
 {{else}} 
                     
 {{if eq .Cat "carbon-trading" }}{{ partial "subcat/carbon-trading.html"}}{{end}}
-{{if eq .Cat "Shelter" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
+{{if eq .Cat "Shelter" }}{{ partial "subcat/shelter.html"}}{{end}}
 {{if eq .Title "Wastewater Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "wastewater collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "No Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
